--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 }
 
 /* line 1, scss/modules/_noselect.scss */
-.noselect, .list-subjects li, .list-subjects-purple li, .list-subjects-green li, .list-questions-green li, .student-list li {
+.noselect, .list-subjects li, .list-subjects-purple li, .list-subjects-green li, .list-questions-green li, .list-make-green li, .student-list li {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -97,22 +97,30 @@ table {
   background: #410C54;
 }
 /* line 31, scss/partials/_headers.scss */
-.header-l-prepare img {
-  margin-left: 10px;
+.header-l-prepare .headerpos {
+  margin-right: auto;
+  margin-left: auto;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-/* line 37, scss/partials/_headers.scss */
+/* line 40, scss/partials/_headers.scss */
 .header-l-lecture {
   height: 50px;
   width: 100%;
   background: #8ED676;
 }
-/* line 41, scss/partials/_headers.scss */
-.header-l-lecture img {
-  margin-left: 10px;
+/* line 44, scss/partials/_headers.scss */
+.header-l-lecture .headerpos {
+  margin-right: auto;
+  margin-left: auto;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-/* line 51, scss/partials/_headers.scss */
+/* line 56, scss/partials/_headers.scss */
 .header-startpage {
   height: 120px;
   width: 100%;
@@ -121,7 +129,7 @@ table {
   padding-bottom: 20px;
   box-shadow: 0px 1px 5px #000;
 }
-/* line 59, scss/partials/_headers.scss */
+/* line 64, scss/partials/_headers.scss */
 .header-startpage h3 {
   color: white;
   text-align: center;
@@ -131,11 +139,11 @@ table {
   font-size: 1em;
 }
 
-/* line 73, scss/partials/_headers.scss */
+/* line 78, scss/partials/_headers.scss */
 .lecturer-startpage-header {
   height: 163px;
   width: 100%;
-  background: #e9e9e9;
+  background: #ffffff;
 }
 
 /* *******
@@ -206,7 +214,7 @@ input:focus {
 /* line 66, scss/partials/_buttons.scss */
 .button-goto-prepare {
   background-color: #410C54;
-  width: 150px;
+  width: 120px;
   height: 100%;
   display: inline-block;
   float: right;
@@ -215,7 +223,7 @@ input:focus {
 }
 /* line 76, scss/partials/_buttons.scss */
 .button-goto-prepare p {
-  margin-top: 15px;
+  margin-top: 9px;
 }
 /* line 80, scss/partials/_buttons.scss */
 .button-goto-prepare:hover {
@@ -223,32 +231,70 @@ input:focus {
 }
 
 /* line 85, scss/partials/_buttons.scss */
+.button-back-prepare {
+  background-color: #8ED676;
+  width: 120px;
+  height: 50px;
+  display: inline-block;
+  float: left;
+  color: white;
+  text-align: center;
+}
+/* line 95, scss/partials/_buttons.scss */
+.button-back-prepare p {
+  margin-top: 15px;
+}
+/* line 99, scss/partials/_buttons.scss */
+.button-back-prepare:hover {
+  background-color: #6eca4f;
+}
+
+/* line 104, scss/partials/_buttons.scss */
+.button-back-lecture {
+  background-color: #410C54;
+  width: 120px;
+  height: 50px;
+  display: inline-block;
+  float: left;
+  color: white;
+  text-align: center;
+}
+/* line 114, scss/partials/_buttons.scss */
+.button-back-lecture p {
+  margin-top: 15px;
+}
+/* line 118, scss/partials/_buttons.scss */
+.button-back-lecture:hover {
+  background-color: #1e0627;
+}
+
+/* line 123, scss/partials/_buttons.scss */
 .button-goto-lecture {
   background-color: #8ED676;
-  width: 150px;
-  height: 100%;
+  width: 120px;
+  height: 50px;
   display: inline-block;
   float: right;
   color: white;
   text-align: center;
 }
-/* line 95, scss/partials/_buttons.scss */
+/* line 133, scss/partials/_buttons.scss */
 .button-goto-lecture p {
-  margin-top: 15px;
+  margin-top: 9px;
 }
-/* line 99, scss/partials/_buttons.scss */
+/* line 137, scss/partials/_buttons.scss */
 .button-goto-lecture:hover {
   background-color: #6eca4f;
 }
 
-/* line 104, scss/partials/_buttons.scss */
+/* line 142, scss/partials/_buttons.scss */
 .drawing-app-submit {
   position: absolute;
   top: 10px;
   right: 10px;
 }
 
-/* line 114, scss/partials/_buttons.scss */
+/* line 152, scss/partials/_buttons.scss */
 .drawing-app-question {
   position: absolute;
   top: 60px;
@@ -256,7 +302,7 @@ input:focus {
   margin-right: -75px;
   z-index: 1000;
 }
-/* line 125, scss/partials/_buttons.scss */
+/* line 163, scss/partials/_buttons.scss */
 .drawing-app-question:hover {
   border: 2px solid #410C54;
   color: #FFF;
@@ -264,14 +310,14 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 133, scss/partials/_buttons.scss */
+/* line 171, scss/partials/_buttons.scss */
 .drawing-app-camera {
   position: absolute;
   top: 60px;
   right: 10px;
   z-index: 1000;
 }
-/* line 143, scss/partials/_buttons.scss */
+/* line 181, scss/partials/_buttons.scss */
 .drawing-app-camera:hover {
   border: 2px solid #410C54;
   color: #FFF;
@@ -279,14 +325,14 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 152, scss/partials/_buttons.scss */
+/* line 190, scss/partials/_buttons.scss */
 .drawing-app-clear {
   position: absolute;
   top: 60px;
   left: 10px;
   z-index: 1000;
 }
-/* line 162, scss/partials/_buttons.scss */
+/* line 200, scss/partials/_buttons.scss */
 .drawing-app-clear:hover {
   border: 2px solid #410C54;
   color: #FFF;
@@ -294,51 +340,52 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 170, scss/partials/_buttons.scss */
+/* line 208, scss/partials/_buttons.scss */
 .drawing-app-back {
   position: absolute;
   top: 10px;
   left: 10px;
 }
 
-/* line 179, scss/partials/_buttons.scss */
+/* line 217, scss/partials/_buttons.scss */
 .back-button {
   position: absolute;
   top: 60px;
   left: 10px;
 }
 
-/* line 188, scss/partials/_buttons.scss */
+/* line 226, scss/partials/_buttons.scss */
 .q-button {
   font-size: 12px;
-  border: 2px solid #8ED676;
   color: #8ED676;
-  width: 70px;
+  border: 2px solid #8ED676;
+  width: 60px;
+  margin: 1px;
 }
-/* line 194, scss/partials/_buttons.scss */
+/* line 233, scss/partials/_buttons.scss */
 .q-button:hover {
-  border: 2px solid white;
   background: #8ED676;
   color: white;
+  border: 2px solid #8ED676;
   transition: 0.4s;
 }
 
-/* line 202, scss/partials/_buttons.scss */
+/* line 241, scss/partials/_buttons.scss */
 .q-button-long {
   font-size: 12px;
   border: 2px solid #8ED676;
   color: #8ED676;
-  width: 155px;
+  width: 130px;
 }
-/* line 208, scss/partials/_buttons.scss */
+/* line 247, scss/partials/_buttons.scss */
 .q-button-long:hover {
-  border: 2px solid white;
+  border: 2px solid #8ED676;
   background: #8ED676;
   color: white;
   transition: 0.4s;
 }
 
-/* line 217, scss/partials/_buttons.scss */
+/* line 256, scss/partials/_buttons.scss */
 .button-hidden {
   opacity: 0;
   transition: opacity 0.3s linear;
@@ -353,7 +400,7 @@ input:focus {
   z-index: 100;
 }
 
-/* line 231, scss/partials/_buttons.scss */
+/* line 270, scss/partials/_buttons.scss */
 .grid-response:hover .button-hidden {
   opacity: 1;
 }
@@ -376,7 +423,7 @@ input:focus {
     color: #ffffff;
 }
 */
-/* line 254, scss/partials/_buttons.scss */
+/* line 293, scss/partials/_buttons.scss */
 .button-correct {
   -moz-box-shadow: inset 0px 1px 0px 0px #a4e271;
   -webkit-box-shadow: inset 0px 1px 0px 0px #a4e271;
@@ -407,7 +454,7 @@ input:focus {
   outline: none;
 }
 
-/* line 283, scss/partials/_buttons.scss */
+/* line 322, scss/partials/_buttons.scss */
 .button-correct:hover {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77a809), color-stop(1, #89c403));
   background: -moz-linear-gradient(top, #77a809 5%, #89c403 100%);
@@ -419,13 +466,13 @@ input:focus {
   background-color: #77a809;
 }
 
-/* line 293, scss/partials/_buttons.scss */
+/* line 332, scss/partials/_buttons.scss */
 .button-correct:active {
   position: relative;
   top: 1px;
 }
 
-/* line 299, scss/partials/_buttons.scss */
+/* line 338, scss/partials/_buttons.scss */
 .button-incorrect {
   -moz-box-shadow: inset 0px 1px 0px 0px #f5978e;
   -webkit-box-shadow: inset 0px 1px 0px 0px #f5978e;
@@ -456,7 +503,7 @@ input:focus {
   outline: none;
 }
 
-/* line 328, scss/partials/_buttons.scss */
+/* line 367, scss/partials/_buttons.scss */
 .button-incorrect:hover {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
   background: -moz-linear-gradient(top, #c62d1f 5%, #f24537 100%);
@@ -468,7 +515,7 @@ input:focus {
   background-color: #c62d1f;
 }
 
-/* line 338, scss/partials/_buttons.scss */
+/* line 377, scss/partials/_buttons.scss */
 .button-incorrect:active {
   position: relative;
   top: 1px;
@@ -901,22 +948,30 @@ body:after {
   background: #410C54;
 }
 /* line 31, scss/partials/_headers.scss */
-.header-l-prepare img {
-  margin-left: 10px;
+.header-l-prepare .headerpos {
+  margin-right: auto;
+  margin-left: auto;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-/* line 37, scss/partials/_headers.scss */
+/* line 40, scss/partials/_headers.scss */
 .header-l-lecture {
   height: 50px;
   width: 100%;
   background: #8ED676;
 }
-/* line 41, scss/partials/_headers.scss */
-.header-l-lecture img {
-  margin-left: 10px;
+/* line 44, scss/partials/_headers.scss */
+.header-l-lecture .headerpos {
+  margin-right: auto;
+  margin-left: auto;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-/* line 51, scss/partials/_headers.scss */
+/* line 56, scss/partials/_headers.scss */
 .header-startpage {
   height: 120px;
   width: 100%;
@@ -925,7 +980,7 @@ body:after {
   padding-bottom: 20px;
   box-shadow: 0px 1px 5px #000;
 }
-/* line 59, scss/partials/_headers.scss */
+/* line 64, scss/partials/_headers.scss */
 .header-startpage h3 {
   color: white;
   text-align: center;
@@ -935,11 +990,11 @@ body:after {
   font-size: 1em;
 }
 
-/* line 73, scss/partials/_headers.scss */
+/* line 78, scss/partials/_headers.scss */
 .lecturer-startpage-header {
   height: 163px;
   width: 100%;
-  background: #e9e9e9;
+  background: #ffffff;
 }
 
 /* *****
@@ -1092,7 +1147,7 @@ body {
 }
 /* line 13, scss/partials/_theme.scss */
 .theme-lecture-mode:hover {
-  opacity: .8;
+  opacity: .7;
 }
 
 /* line 19, scss/partials/_theme.scss */
@@ -1307,14 +1362,14 @@ body {
 }
 
 /* line 1, scss/partials/_list.scss */
-.list-subjects, .list-subjects-purple, .list-subjects-green, .list-questions-green {
+.list-subjects, .list-subjects-purple, .list-subjects-green, .list-questions-green, .list-make-green {
   margin-top: 20px;
   width: 50%;
   margin: auto;
   padding-top: 30px;
 }
 /* line 10, scss/partials/_list.scss */
-.list-subjects li, .list-subjects-purple li, .list-subjects-green li, .list-questions-green li {
+.list-subjects li, .list-subjects-purple li, .list-subjects-green li, .list-questions-green li, .list-make-green li {
   color: white;
   text-align: center;
   height: 30px;
@@ -1391,11 +1446,34 @@ body {
 }
 
 /* line 88, scss/partials/_list.scss */
+.list-make-green {
+  opacity: .9;
+}
+/* line 91, scss/partials/_list.scss */
+.list-make-green li {
+  background: #8ED676;
+  text-align: left;
+  padding-left: 5px;
+  padding-right: 5px;
+  cursor: auto;
+}
+/* line 98, scss/partials/_list.scss */
+.list-make-green h3 {
+  text-align: center;
+  padding-bottom: 10px;
+}
+/* line 103, scss/partials/_list.scss */
+.list-make-green li button {
+  float: right;
+  margin-top: -5px;
+}
+
+/* line 109, scss/partials/_list.scss */
 .student-list {
   width: 80%;
   margin: auto;
 }
-/* line 93, scss/partials/_list.scss */
+/* line 114, scss/partials/_list.scss */
 .student-list li {
   margin-bottom: 10px;
   height: 50px;
@@ -1410,32 +1488,32 @@ body {
   font-size: 30px;
   text-align: center;
 }
-/* line 107, scss/partials/_list.scss */
+/* line 128, scss/partials/_list.scss */
 .student-list li:hover {
   background: white;
   color: #8ED676;
   transition: 0.4s;
 }
-/* line 114, scss/partials/_list.scss */
+/* line 135, scss/partials/_list.scss */
 .student-list li button {
   float: right;
 }
 
-/* line 119, scss/partials/_list.scss */
+/* line 140, scss/partials/_list.scss */
 .list-questions, .list-questions-purple {
   margin-top: 20px;
   width: 100%;
 }
-/* line 124, scss/partials/_list.scss */
+/* line 145, scss/partials/_list.scss */
 .list-questions ul, .list-questions-purple ul {
   max-width: 50%;
   margin: auto;
 }
-/* line 130, scss/partials/_list.scss */
+/* line 151, scss/partials/_list.scss */
 .list-questions ul li, .list-questions-purple ul li {
   margin-bottom: 10px;
 }
-/* line 134, scss/partials/_list.scss */
+/* line 155, scss/partials/_list.scss */
 .list-questions ul li div, .list-questions-purple ul li div {
   color: white;
   height: 30px;
@@ -1445,25 +1523,25 @@ body {
   transition: .3s;
   padding-left: 10px;
 }
-/* line 144, scss/partials/_list.scss */
+/* line 165, scss/partials/_list.scss */
 .list-questions h2, .list-questions-purple h2 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
   font-size: 40px;
 }
-/* line 151, scss/partials/_list.scss */
+/* line 172, scss/partials/_list.scss */
 .list-questions h3, .list-questions-purple h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 500;
   padding-bottom: 10px;
 }
-/* line 158, scss/partials/_list.scss */
+/* line 179, scss/partials/_list.scss */
 .list-questions label, .list-questions-purple label {
   font-size: 20px;
 }
-/* line 161, scss/partials/_list.scss */
+/* line 182, scss/partials/_list.scss */
 .list-questions button, .list-questions-purple button {
   border-radius: 12px;
   margin-right: 5px;
@@ -1479,7 +1557,7 @@ body {
   color: #410C54;
   width: 70px;
 }
-/* line 175, scss/partials/_list.scss */
+/* line 196, scss/partials/_list.scss */
 .list-questions button:hover, .list-questions-purple button:hover {
   border: 2px solid #410C54;
   background: #410C54;
@@ -1487,23 +1565,19 @@ body {
   transition: 0.4s;
 }
 
-/* line 188, scss/partials/_list.scss */
+/* line 209, scss/partials/_list.scss */
 .list-questions-purple ul li div {
   background: #410C54;
 }
-/* line 192, scss/partials/_list.scss */
-.list-questions-purple ul li div:hover {
-  background: #1e0627;
-}
 
-/* line 201, scss/partials/_list.scss */
+/* line 217, scss/partials/_list.scss */
 .grid-container {
   margin: 0 auto;
   width: 1200px;
   padding-top: 20px;
 }
 
-/* line 208, scss/partials/_list.scss */
+/* line 224, scss/partials/_list.scss */
 .grid-response {
   float: left;
   width: 110px;
