--- a/css/scss/partials/_buttons.scss
+++ b/css/scss/partials/_buttons.scss
@@ -65,10 +65,48 @@ input:focus {
 // Lecturer go to prepare mode (header button on right)
 .button-goto-prepare {
     background-color: $uq-purple;
-    width: 150px;
+    width: 120px;
     height: 100%;
     display: inline-block;
     float: right;
+
+    color: white;
+    text-align: center;
+    
+    p {
+        margin-top: 9px;
+    }
+
+    &:hover {
+        background-color: darken($uq-purple, 10%);
+    }
+}
+
+.button-back-prepare{
+	background-color: $uq-green;
+    width: 120px;
+    height: $header-height;
+    display: inline-block;
+    float: left;
+
+    color: white;
+    text-align: center;
+    
+    p {
+        margin-top: 15px;
+    }
+
+    &:hover {
+        background-color: darken($uq-green, 10%);
+    }
+}
+
+.button-back-lecture{
+	background-color: $uq-purple;
+    width: 120px;
+    height: $header-height;
+    display: inline-block;
+    float: left;
 
     color: white;
     text-align: center;
@@ -84,8 +122,8 @@ input:focus {
 
 .button-goto-lecture {
     background-color: $uq-green;
-    width: 150px;
-    height: 100%;
+    width: 120px;
+    height: $header-height;
     display: inline-block;
     float: right;
 
@@ -93,7 +131,7 @@ input:focus {
     text-align: center;
     
     p {
-        margin-top: 15px;
+        margin-top: 9px;
     }
 
     &:hover {
@@ -188,13 +226,14 @@ input:focus {
 .q-button {
 	@extend .submit;
 	font-size: 12px;
-	border: 2px solid $uq-green;
 	color: $uq-green;
-	width: 70px;
+	border:2px solid $uq-green;
+	width: 60px;
+	margin:1px;
 	&:hover {
-        border: 2px solid white;
 		background: $uq-green;
         color: white;
+		border:2px solid $uq-green;
         transition: 0.4s;
 	}
 }
@@ -204,9 +243,9 @@ input:focus {
 	font-size: 12px;
 	border: 2px solid $uq-green;
 	color: $uq-green;
-	width: 155px;
+	width: 130px;
 	&:hover {
-        border: 2px solid white;
+        border: 2px solid $uq-green;
 		background: $uq-green;
         color: white;
         transition: 0.4s;
