--- a/css/scss/partials/_updatedCanvas.scss
+++ b/css/scss/partials/_updatedCanvas.scss
@@ -16,6 +16,7 @@
     -ms-touch-action: none;
     /* prevent selection highlight */
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+
 }
         
 .header, .footer{
@@ -113,9 +114,19 @@
     }
 }
 #canvas{
-    cursor:crosshair ;
+    cursor: crosshair;
     background-color:#fff;
 }
+#canvas.small {
+    cursor: url('../assets/images/erasor_small.png') 5 5, crosshair;
+}
+#canvas.medium {
+    cursor: url('../assets/images/erasor_medium.png') 10 10, crosshair;
+}
+#canvas.large {
+    cursor: url('../assets/images/erasor_large.png') 20 20, crosshair;
+}
+
 .palette-case {
     width:260px;
     margin:auto;
@@ -463,5 +474,35 @@ $break-h-small: 690px;
 /* Floating part
 
 */
+#question-container {
+    -webkit-transform: translate3d(0, 0, 0);
+    position: absolute;
+    z-index: 1990;
+    height: 250px;
+    background: $uq-purple;
+    width: 100%;
+    transition: .3s ease-in-out;
+    h1 {
+        color: white;
+        font-size: 40px;
+        font-weight: 500;
+        text-align: center;
+        padding-top: 20px;
+    }
+    h2 {
+        color: white;
+        font-size: 20px;
+        font-weight: 500;
+        text-align: center;
+        padding-top: 20px;
+        width: 80%;
+        margin: auto;
+    }
+}
+
+#question-container.closed {
+    -webkit-transform: translate3d(0, -290px, 0);
+}
+
 
 
