fixed css media query overlap

--- a/css/main.css
+++ b/css/main.css
@@ -1891,14 +1891,21 @@ body {
 }
 
 @media screen and (max-width: 960px) {
-  /* line 255, scss/_updatedCanvas.scss */
+  /* line 259, scss/_updatedCanvas.scss */
   .closed {
     transform: translate3d(-100vw, 0, 0);
     -webkit-transform: translate3d(-100vw, 0, 0);
   }
 }
-@media screen and (min-width: 960px) {
-  /* line 255, scss/_updatedCanvas.scss */
+@media screen and (min-width: 961px) and (max-height: 690px) {
+  /* line 259, scss/_updatedCanvas.scss */
+  .closed {
+    transform: translate3d(-100vw, 0, 0);
+    -webkit-transform: translate3d(-100vw, 0, 0);
+  }
+}
+@media screen and (min-width: 961px) and (min-height: 691px) {
+  /* line 259, scss/_updatedCanvas.scss */
   .closed {
     transform: translate3d(-300px, 0, 0);
     -webkit-transform: translate3d(-300px, 0, 0);
@@ -1906,7 +1913,7 @@ body {
 }
 
 @media screen and (max-width: 960px) {
-  /* line 379, scss/_updatedCanvas.scss */
+  /* line 388, scss/_updatedCanvas.scss */
   #tool-bar {
     transition: .3s;
     position: absolute;
@@ -1917,14 +1924,14 @@ body {
     height: 250px;
     float: none;
   }
-  /* line 270, scss/_updatedCanvas.scss */
+  /* line 279, scss/_updatedCanvas.scss */
   #tool-bar .element {
     float: left;
     border-right: 1px solid black;
     height: 100%;
     width: 33%;
   }
-  /* line 276, scss/_updatedCanvas.scss */
+  /* line 285, scss/_updatedCanvas.scss */
   #tool-bar .element h1 {
     color: white;
     text-align: center;
@@ -1933,18 +1940,18 @@ body {
     padding-top: 10px;
     margin-bottom: 20px;
   }
-  /* line 285, scss/_updatedCanvas.scss */
+  /* line 294, scss/_updatedCanvas.scss */
   #tool-bar .element .selected {
     background: black;
   }
-  /* line 289, scss/_updatedCanvas.scss */
+  /* line 298, scss/_updatedCanvas.scss */
   #tool-bar .element .color-selected {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid white;
   }
-  /* line 297, scss/_updatedCanvas.scss */
+  /* line 306, scss/_updatedCanvas.scss */
   #tool-bar .element div {
     height: 50px;
     width: 50px;
@@ -1954,26 +1961,26 @@ body {
     margin-left: -25px;
     text-align: center;
   }
-  /* line 306, scss/_updatedCanvas.scss */
+  /* line 315, scss/_updatedCanvas.scss */
   #tool-bar .element div i {
     color: white;
     margin-top: 10px;
     font-size: 25px;
   }
-  /* line 312, scss/_updatedCanvas.scss */
+  /* line 321, scss/_updatedCanvas.scss */
   #tool-bar .element div p {
     color: white;
     padding-top: 20px;
     font-size: 15px;
     text-align: center;
   }
-  /* line 322, scss/_updatedCanvas.scss */
+  /* line 331, scss/_updatedCanvas.scss */
   #tool-bar .element:nth-child(3) {
     border-right: none;
   }
 }
-@media screen and (min-width: 960px) and (max-height: 690px) {
-  /* line 379, scss/_updatedCanvas.scss */
+@media screen and (min-width: 961px) and (max-height: 690px) {
+  /* line 388, scss/_updatedCanvas.scss */
   #tool-bar {
     transition: .3s;
     position: absolute;
@@ -1984,14 +1991,14 @@ body {
     height: 250px;
     float: none;
   }
-  /* line 270, scss/_updatedCanvas.scss */
+  /* line 279, scss/_updatedCanvas.scss */
   #tool-bar .element {
     float: left;
     border-right: 1px solid black;
     height: 100%;
     width: 33%;
   }
-  /* line 276, scss/_updatedCanvas.scss */
+  /* line 285, scss/_updatedCanvas.scss */
   #tool-bar .element h1 {
     color: white;
     text-align: center;
@@ -2000,18 +2007,18 @@ body {
     padding-top: 10px;
     margin-bottom: 20px;
   }
-  /* line 285, scss/_updatedCanvas.scss */
+  /* line 294, scss/_updatedCanvas.scss */
   #tool-bar .element .selected {
     background: black;
   }
-  /* line 289, scss/_updatedCanvas.scss */
+  /* line 298, scss/_updatedCanvas.scss */
   #tool-bar .element .color-selected {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid white;
   }
-  /* line 297, scss/_updatedCanvas.scss */
+  /* line 306, scss/_updatedCanvas.scss */
   #tool-bar .element div {
     height: 50px;
     width: 50px;
@@ -2021,26 +2028,26 @@ body {
     margin-left: -25px;
     text-align: center;
   }
-  /* line 306, scss/_updatedCanvas.scss */
+  /* line 315, scss/_updatedCanvas.scss */
   #tool-bar .element div i {
     color: white;
     margin-top: 10px;
     font-size: 25px;
   }
-  /* line 312, scss/_updatedCanvas.scss */
+  /* line 321, scss/_updatedCanvas.scss */
   #tool-bar .element div p {
     color: white;
     padding-top: 20px;
     font-size: 15px;
     text-align: center;
   }
-  /* line 322, scss/_updatedCanvas.scss */
+  /* line 331, scss/_updatedCanvas.scss */
   #tool-bar .element:nth-child(3) {
     border-right: none;
   }
 }
-@media screen and (min-width: 960px) and (min-height: 690px) {
-  /* line 379, scss/_updatedCanvas.scss */
+@media screen and (min-width: 961px) and (min-height: 691px) {
+  /* line 388, scss/_updatedCanvas.scss */
   #tool-bar {
     transition: .3s;
     position: absolute;
@@ -2050,11 +2057,11 @@ body {
     width: 80px;
     height: 100%;
   }
-  /* line 328, scss/_updatedCanvas.scss */
+  /* line 337, scss/_updatedCanvas.scss */
   #tool-bar .element {
     display: block;
   }
-  /* line 331, scss/_updatedCanvas.scss */
+  /* line 340, scss/_updatedCanvas.scss */
   #tool-bar .element h1 {
     color: white;
     text-align: center;
@@ -2066,18 +2073,18 @@ body {
     padding-bottom: 10px;
     margin-top: 10px;
   }
-  /* line 343, scss/_updatedCanvas.scss */
+  /* line 352, scss/_updatedCanvas.scss */
   #tool-bar .element .selected {
     background: black;
   }
-  /* line 347, scss/_updatedCanvas.scss */
+  /* line 356, scss/_updatedCanvas.scss */
   #tool-bar .element .color-selected {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid white;
   }
-  /* line 355, scss/_updatedCanvas.scss */
+  /* line 364, scss/_updatedCanvas.scss */
   #tool-bar .element div {
     height: 50px;
     width: 50px;
@@ -2086,13 +2093,13 @@ body {
     margin-left: -25px;
     text-align: center;
   }
-  /* line 363, scss/_updatedCanvas.scss */
+  /* line 372, scss/_updatedCanvas.scss */
   #tool-bar .element div i {
     color: white;
     margin-top: 10px;
     font-size: 25px;
   }
-  /* line 369, scss/_updatedCanvas.scss */
+  /* line 378, scss/_updatedCanvas.scss */
   #tool-bar .element div p {
     color: white;
     padding-top: 20px;
@@ -2101,37 +2108,37 @@ body {
   }
 }
 
-/* line 415, scss/_updatedCanvas.scss */
+/* line 424, scss/_updatedCanvas.scss */
 #color-blue {
   background-color: blue;
 }
 
-/* line 419, scss/_updatedCanvas.scss */
+/* line 428, scss/_updatedCanvas.scss */
 #color-red {
   background-color: red;
 }
 
-/* line 422, scss/_updatedCanvas.scss */
+/* line 431, scss/_updatedCanvas.scss */
 #color-green {
   background-color: green;
 }
 
-/* line 428, scss/_updatedCanvas.scss */
+/* line 437, scss/_updatedCanvas.scss */
 .circle-small {
   margin-top: 20px !important;
 }
 
-/* line 432, scss/_updatedCanvas.scss */
+/* line 441, scss/_updatedCanvas.scss */
 .circle-medium {
   margin-top: 15px !important;
 }
 
-/* line 436, scss/_updatedCanvas.scss */
+/* line 445, scss/_updatedCanvas.scss */
 .circle-large {
   margin-top: 10px !important;
 }
 
-/* line 444, scss/_updatedCanvas.scss */
+/* line 453, scss/_updatedCanvas.scss */
 .loading {
   position: absolute;
   z-index: 10000;
@@ -2169,7 +2176,7 @@ body {
 /* Floating part
 
 */
-/* line 477, scss/_updatedCanvas.scss */
+/* line 486, scss/_updatedCanvas.scss */
 #question-container {
   -webkit-transform: translate3d(0, 0, 0);
   position: absolute;
@@ -2179,7 +2186,7 @@ body {
   width: 100%;
   transition: .3s ease-in-out;
 }
-/* line 485, scss/_updatedCanvas.scss */
+/* line 494, scss/_updatedCanvas.scss */
 #question-container h1 {
   color: white;
   font-size: 40px;
@@ -2187,7 +2194,7 @@ body {
   text-align: center;
   padding-top: 20px;
 }
-/* line 492, scss/_updatedCanvas.scss */
+/* line 501, scss/_updatedCanvas.scss */
 #question-container h2 {
   color: white;
   font-size: 20px;
@@ -2198,7 +2205,7 @@ body {
   margin: auto;
 }
 
-/* line 503, scss/_updatedCanvas.scss */
+/* line 512, scss/_updatedCanvas.scss */
 #question-container.closed {
   -webkit-transform: translate3d(0, -290px, 0);
 }
