--- a/css/scss/_list.scss
+++ b/css/scss/_list.scss
@@ -152,14 +152,16 @@
 		margin-bottom: 10px;
 	}
 
-	ul li div {
+	ul li {
 		color: white;
-		height: 30px;
+		min-height: 30px;
 		margin: 3px;
 		border-radius:15px;
 		padding-top: 12px;
 		transition: .3s;
-		padding-left: 10px;
+		padding-left: 3px;
+		display: table;
+		min-width: 680px;
 	}
 
 	h2 {
@@ -231,4 +233,28 @@
 	border-radius: 25px;
     border: 4px solid;
     border-color: $uq-purple; 
+}
+
+.question-container{
+		color: white;
+		min-height: 30px;
+		margin: 3px;
+		border-radius:15px;
+		padding-top: 12px;
+		transition: .3s;
+		padding-left: 10px;
+		display: table;
+		min-width: 680px;
+}
+
+.question{
+	float: left;
+	padding-bottom: 12px;
+}
+
+.question-button{
+	float: right;
+	border-radius:15px;
+	padding-bottom: 5px;
+
 }
