--- a/css/scss/_list.scss
+++ b/css/scss/_list.scss
@@ -113,17 +113,17 @@
 	
 	li {
 		margin-bottom: 10px;
-		height: 50px;
 		background: $uq-green;
 		color: white;
 		margin: 3px;
-		padding-top: 12px;
+		padding-top: 10px;
+		padding-bottom: 10px;
 		transition: .3s;
 		cursor: pointer;
 		@extend .noselect;
 		font-size: 30px;
 		padding-left:20px;
-		font-size: 30px;
+		font-size: 20px;
 		text-align:center;
 	&:hover {
 		background: white;
