--- a/css/main.css
+++ b/css/main.css
@@ -1422,53 +1422,56 @@ body {
 .list-questions-green li {
   background: #8ED676;
   text-align: left;
-  padding-left: 5px;
   padding-right: 5px;
 }
-/* line 74, scss/_list.scss */
+/* line 73, scss/_list.scss */
 .list-questions-green li:hover {
   background: #54b135;
 }
-/* line 77, scss/_list.scss */
+/* line 76, scss/_list.scss */
 .list-questions-green h3 {
   text-align: center;
   padding-bottom: 10px;
 }
-/* line 82, scss/_list.scss */
+/* line 81, scss/_list.scss */
 .list-questions-green li button {
   float: right;
   margin-top: -5px;
 }
 
-/* line 88, scss/_list.scss */
+/* line 87, scss/_list.scss */
 .list-make-green {
   opacity: .9;
 }
-/* line 91, scss/_list.scss */
+/* line 90, scss/_list.scss */
 .list-make-green li {
   background: #8ED676;
   text-align: left;
-  padding-left: 5px;
-  padding-right: 5px;
   cursor: auto;
+  padding-top: 0px;
+  padding-right: 10px;
 }
-/* line 98, scss/_list.scss */
+/* line 97, scss/_list.scss */
 .list-make-green h3 {
   text-align: center;
   padding-bottom: 10px;
 }
-/* line 103, scss/_list.scss */
+/* line 102, scss/_list.scss */
 .list-make-green li button {
   float: right;
-  margin-top: -5px;
+}
+/* line 106, scss/_list.scss */
+.list-make-green ul, .list-make-green li {
+  display: table;
+  min-width: 680px;
 }
 
-/* line 109, scss/_list.scss */
+/* line 112, scss/_list.scss */
 .student-list {
   width: 80%;
   margin: auto;
 }
-/* line 114, scss/_list.scss */
+/* line 117, scss/_list.scss */
 .student-list li {
   margin-bottom: 10px;
   background: #8ED676;
@@ -1483,32 +1486,32 @@ body {
   font-size: 20px;
   text-align: center;
 }
-/* line 128, scss/_list.scss */
+/* line 131, scss/_list.scss */
 .student-list li:hover {
   background: white;
   color: #8ED676;
   transition: 0.4s;
 }
-/* line 135, scss/_list.scss */
+/* line 138, scss/_list.scss */
 .student-list li button {
   float: right;
 }
 
-/* line 140, scss/_list.scss */
+/* line 143, scss/_list.scss */
 .list-questions, .list-questions-purple {
   margin-top: 20px;
   width: 100%;
 }
-/* line 145, scss/_list.scss */
+/* line 148, scss/_list.scss */
 .list-questions ul, .list-questions-purple ul {
   max-width: 50%;
   margin: auto;
 }
-/* line 151, scss/_list.scss */
+/* line 154, scss/_list.scss */
 .list-questions ul li, .list-questions-purple ul li {
   margin-bottom: 10px;
 }
-/* line 155, scss/_list.scss */
+/* line 158, scss/_list.scss */
 .list-questions ul li, .list-questions-purple ul li {
   color: white;
   min-height: 30px;
@@ -1520,25 +1523,26 @@ body {
   display: table;
   min-width: 680px;
 }
-/* line 167, scss/_list.scss */
+/* line 170, scss/_list.scss */
 .list-questions h2, .list-questions-purple h2 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
   font-size: 40px;
 }
-/* line 174, scss/_list.scss */
+/* line 177, scss/_list.scss */
 .list-questions h3, .list-questions-purple h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 500;
   padding-bottom: 10px;
 }
-/* line 181, scss/_list.scss */
+/* line 184, scss/_list.scss */
 .list-questions label, .list-questions-purple label {
   font-size: 20px;
+  color: black;
 }
-/* line 184, scss/_list.scss */
+/* line 188, scss/_list.scss */
 .list-questions button, .list-questions-purple button {
   border-radius: 12px;
   margin-right: 5px;
@@ -1554,7 +1558,7 @@ body {
   color: #410C54;
   width: 70px;
 }
-/* line 198, scss/_list.scss */
+/* line 202, scss/_list.scss */
 .list-questions button:hover, .list-questions-purple button:hover {
   border: 2px solid #410C54;
   background: #410C54;
@@ -1562,19 +1566,19 @@ body {
   transition: 0.4s;
 }
 
-/* line 211, scss/_list.scss */
+/* line 215, scss/_list.scss */
 .list-questions-purple ul li div {
   background: #410C54;
 }
 
-/* line 219, scss/_list.scss */
+/* line 223, scss/_list.scss */
 .grid-container {
   margin: 0 auto;
   width: 1200px;
   padding-top: 20px;
 }
 
-/* line 226, scss/_list.scss */
+/* line 230, scss/_list.scss */
 .grid-response {
   float: left;
   width: 110px;
@@ -1587,30 +1591,78 @@ body {
   border-color: #410C54;
 }
 
-/* line 238, scss/_list.scss */
+/* line 242, scss/_list.scss */
 .question-container {
   color: white;
   min-height: 30px;
   margin: 3px;
   border-radius: 15px;
-  padding-top: 12px;
+  padding-top: 8px;
   transition: .3s;
   padding-left: 10px;
   display: table;
   min-width: 680px;
 }
 
-/* line 250, scss/_list.scss */
+/* line 254, scss/_list.scss */
 .question {
   float: left;
   padding-bottom: 12px;
 }
 
-/* line 255, scss/_list.scss */
+/* line 259, scss/_list.scss */
 .question-button {
   float: right;
   border-radius: 15px;
   padding-bottom: 5px;
+}
+
+/* line 266, scss/_list.scss */
+.make-button {
+  border-radius: 12px;
+  margin-right: 5px;
+  padding: 2px;
+  transition: 0.4s;
+  cursor: pointer;
+  background: white;
+  margin-top: -5px;
+  height: 30px;
+  float: right;
+  font-size: 12px;
+  border: 2px solid white;
+  color: #8ED676;
+  width: 70px;
+}
+/* line 280, scss/_list.scss */
+.make-button:hover {
+  border: 2px solid #8ED676;
+  background: #8ED676;
+  color: white;
+  transition: 0.4s;
+}
+
+/* line 288, scss/_list.scss */
+.make-button-long {
+  border-radius: 12px;
+  margin-right: 5px;
+  padding: 2px;
+  transition: 0.4s;
+  cursor: pointer;
+  background: white;
+  margin-top: -5px;
+  height: 30px;
+  float: right;
+  font-size: 12px;
+  border: 2px solid white;
+  color: #8ED676;
+  width: 130px;
+}
+/* line 302, scss/_list.scss */
+.make-button-long:hover {
+  border: 2px solid #8ED676;
+  background: #8ED676;
+  color: white;
+  transition: 0.4s;
 }
 
 /*
