--- a/css/scss/_list.scss
+++ b/css/scss/_list.scss
@@ -67,7 +67,6 @@
 	li {
 		background: $uq-green;
 		text-align:left;
-		padding-left:5px;
 		padding-right:5px;
 	}
 
@@ -91,9 +90,9 @@
 	li {
 		background: $uq-green;
 		text-align:left;
-		padding-left:5px;
-		padding-right:5px;
 		cursor: auto;
+		padding-top: 0px;
+		padding-right: 10px;
 	}
 	h3 {
 		text-align:center;
@@ -102,7 +101,11 @@
 
 	li button {
 		float: right;
-		margin-top: -5px;
+	}
+
+	ul, li{
+		display: table;
+		min-width: 680px;
 	}
 }
 
@@ -180,6 +183,7 @@
 
 	label {
 		font-size: 20px;
+		color: black;
 	}
 	button {
 		border-radius: 12px;
@@ -240,7 +244,7 @@
 		min-height: 30px;
 		margin: 3px;
 		border-radius:15px;
-		padding-top: 12px;
+		padding-top: 8px;
 		transition: .3s;
 		padding-left: 10px;
 		display: table;
@@ -257,4 +261,48 @@
 	border-radius:15px;
 	padding-bottom: 5px;
 
+}
+
+.make-button {
+		border-radius: 12px;
+		margin-right:5px;
+		padding:2px;
+		transition: 0.4s;
+		cursor: pointer;
+		background:white;
+		margin-top:-5px;
+		height: 30px;
+		float:right;
+		font-size: 12px;
+		border: 2px solid white;
+		color: $uq-green;
+		width: 70px;
+		&:hover {
+			border: 2px solid $uq-green;
+			background: $uq-green;
+			color: white;
+			transition: 0.4s;
+		}
+}
+
+.make-button-long {
+		border-radius: 12px;
+		margin-right:5px;
+		padding:2px;
+		transition: 0.4s;
+		cursor: pointer;
+		background:white;
+		margin-top:-5px;
+		height: 30px;
+		float:right;
+		font-size: 12px;
+		border: 2px solid white;
+		color: $uq-green;
+		width: 130px;
+		&:hover {
+			border: 2px solid $uq-green;
+			background: $uq-green;
+			color: white;
+			transition: 0.4s;
+		}
 }
