--- a/css/scss/_images.scss
+++ b/css/scss/_images.scss
@@ -3,17 +3,10 @@ $break-small: 960px;
 .student-startpage-logo {
 	position:absolute;
     width: 400px;
-<<<<<<< HEAD
 
     @media screen and (max-width: $break-small) {
       width: 200px;
     }
-
-=======
-	left: 50%;
-	margin-left:-200px;
-	margin-top:10px;
->>>>>>> a5dd412773295104eca639b1a5baac27196e390c
 }
 
 .lecturer-startpage-logo {
@@ -21,6 +14,10 @@ $break-small: 960px;
     margin-left: auto;
     margin-right: auto;
     width: 400px;
+
+    @media screen and (max-width: $break-small) {
+      width: 200px;
+    }
 }
 
 .images-l-subjects {
